third/jitfailure-dolfin_expression_6b57c63388ee2717409f9250076e8a7a/error.log
/tmp/tmp57d7bn_t/dolfin_expression_6b57c63388ee2717409f9250076e8a7a.cpp: In member function 'virtual void dolfin::dolfin_expression_6b57c63388ee2717409f9250076e8a7a::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmp57d7bn_t/dolfin_expression_6b57c63388ee2717409f9250076e8a7a.cpp:61:23: error: expected primary-expression before ';' token
   61 |           values[0] = ;
      |                       ^
